--- a/MapBox/style.css
+++ b/MapBox/style.css
@@ -3,4 +3,29 @@
     min-height: 100vh;
    
 }
-body { margin: 0; padding: 0; }
+* { margin: 0; padding: 0; }
+.wrapper {
+   width: 100%;
+   height: 100vh;
+   position: relative;
+}
+.left-panel{
+    position: absolute;
+    width: 300px;
+    height: calc(100vh - 2rem);
+    left: 1rem;
+    top: 1rem;
+    border-radius: 5px;
+    z-index: 10;
+    background-color: white;
+}
+.right-panel{
+    position: absolute;
+    width: 300px;
+    height: 190px;
+    right: 1rem;
+    top: 1rem;
+   border-radius: 5px;
+    z-index: 10;
+    background-color: white;
+}
