--- a/MapBox/style.css
+++ b/MapBox/style.css
@@ -29,3 +29,17 @@
     z-index: 10;
     background-color: white;
 }
+.btn-open-leftpanel {
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    top: 50%;
+    left: 1rem;
+    transform: translateY(-50%);
+    position: absolute;
+    z-index: 9;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
