--- a/MapBox/style.css
+++ b/MapBox/style.css
@@ -1,20 +1,28 @@
-#map{
-    width: 100%;
-    min-height: 100vh;
-   
-}
-* { margin: 0; padding: 0; }
+body { margin: 0; padding: 0; }
+	#map { position: absolute; top: 0; bottom: 0; width: 100%; background:#ddd;}
 .wrapper {
    width: 100%;
    height: 100vh;
    position: relative;
 }
+.map {
+    width: 100%;
+    height: calc(100vh - 15px);
+    }
+    .selectStyle {
+    position: absolute;
+    z-index: 1;
+    top: 10px;
+    left: 10px;
+    background-color: #fff;
+    padding: 10px;
+    }
 .left-panel{
     position: absolute;
     width: 300px;
-    height: calc(100vh - 2rem);
-    left: 1rem;
-    top: 1rem;
+    height: calc(100vh - 5rem);
+    left: 0.5rem;
+    top: 4rem;
     border-radius: 5px;
     z-index: 10;
     background-color: white;
