--- a/MapBox/style.css
+++ b/MapBox/style.css
@@ -27,13 +27,24 @@ body { margin: 0; padding: 0; }
     z-index: 10;
     background-color: white;
 }
-.right-panel{
+.right-panel-background{
+  
     position: absolute;
     width: 300px;
-    height: 190px;
+    height: 36px;
     right: 1rem;
-    top: 1rem;
+    top: 0.5rem;
    border-radius: 5px;
+    z-index: 10;
+    background-color: white;
+}
+.right-panel-raster{
+    position: absolute;
+    width: 300px;
+    height: 36px;
+   
+    top: 3rem;
+    border-radius: 5px;
     z-index: 10;
     background-color: white;
 }
