--- a/MapBox/style.css
+++ b/MapBox/style.css
@@ -33,7 +33,7 @@ body { margin: 0; padding: 0; }
     width: 300px;
     height: 36px;
     right: 1rem;
-    top: 0.5rem;
+    top: 7rem;
    border-radius: 5px;
     z-index: 10;
     background-color: white;
@@ -62,3 +62,27 @@ body { margin: 0; padding: 0; }
     align-items: center;
     justify-content: center;
 }
+.displayMeasure {
+    background-color: #fff;
+    right: 150px;
+    top: 100px;
+    position: absolute;
+    z-index: 3;
+    user-select: none;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 20%), 0 -1px 0px rgb(0 0 0 / 2%) !important;
+    padding: 0.5rem 0;
+    }
+     
+    .labelMeasure {
+    float: left;
+    padding-left: 15px;
+    font-size: 17px;
+    padding-top: 6px;
+    }
+     
+    .contentMeasure {
+    display: inline-block;
+    padding: 6px 5px 0px 10px;
+    font-size: 15px;
+    }
+   
