--- a/MapBox/style.css
+++ b/MapBox/style.css
@@ -71,6 +71,8 @@ body { margin: 0; padding: 0; }
     user-select: none;
     box-shadow: 0 2px 4px rgb(0 0 0 / 20%), 0 -1px 0px rgb(0 0 0 / 2%) !important;
     padding: 0.5rem 0;
+    border-radius: 5px;
+    display: none;
     }
      
     .labelMeasure {
