--- a/MapBox/style.css
+++ b/MapBox/style.css
@@ -100,9 +100,17 @@ body { margin: 0; padding: 0; }
         display: flex;
         align-items: center;
         justify-content: center;}
-    .btn-open-leftpanel :hover {
-        
-        background-color: gray;
-        cursor: pointer;
-        
-    }
+       .btn-open-rightpanel{
+        width: 40px;
+        height: 40px;
+        background-color: #fff;
+        top: 50%;
+        right: 1rem;
+        transform: translateY(-50%);
+        position: absolute;
+        z-index: 9;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+       }
