--- a/MapBox/style.css
+++ b/MapBox/style.css
@@ -143,3 +143,31 @@ body { margin: 0; padding: 0; }
    
    
 }
+.btn-open-leftpanel-infor {
+    width: 40px;
+    height: 40px;
+    background-color: #14B5A0;
+    bottom: 40%;
+    left: 1rem;
+    transform: translateY(-50%);
+    position: absolute;
+    z-index: 1;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn-open-leftpanel-infor2 {
+    width: 40px;
+    height: 40px;
+    background-color: #14B5A0;
+    bottom: 35%;
+    left: 1rem;
+    transform: translateY(-50%);
+    position: absolute;
+    z-index: 1;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
