--- a/MapBox/style.css
+++ b/MapBox/style.css
@@ -44,20 +44,7 @@ body { margin: 0; padding: 0; }
     z-index: 10;
     background-color: white;
 }
-.btn-open-leftpanel {
-    width: 40px;
-    height: 40px;
-    background-color: #fff;
-    top: 50%;
-    left: 1rem;
-    transform: translateY(-50%);
-    position: absolute;
-    z-index: 9;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+
 .displayMeasure {
     background-color: #fff;
     right: 450px;
@@ -85,17 +72,17 @@ body { margin: 0; padding: 0; }
     }
     .btn-open-leftpanel {
         width: 40px;
-        height: 40px;
-        background-color: #14B5A0;
-        top: 50%;
-        left: 1rem;
-        transform: translateY(-50%);
-        position: absolute;
-        z-index: 9;
-        border-radius: 5px;
-        
-        align-items: center;
-        justify-content:center;}
+    height: 40px;
+    background-color: #14B5A0;
+    bottom: 20%;
+    left: 1rem;
+    transform: translateY(-50%);
+    position: absolute;
+    z-index: 1;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;}
        .btn-open-rightpanel{
         width: 40px;
         height: 40px;
@@ -147,7 +134,7 @@ body { margin: 0; padding: 0; }
     width: 40px;
     height: 40px;
     background-color: #14B5A0;
-    bottom: 40%;
+    bottom: 15%;
     left: 1rem;
     transform: translateY(-50%);
     position: absolute;
@@ -161,7 +148,21 @@ body { margin: 0; padding: 0; }
     width: 40px;
     height: 40px;
     background-color: #14B5A0;
-    bottom: 35%;
+    bottom: 10%;
+    left: 1rem;
+    transform: translateY(-50%);
+    position: absolute;
+    z-index: 1;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn-open-leftpanel-infor3 {
+    width: 40px;
+    height: 40px;
+    background-color: #14B5A0;
+    bottom: 5%;
     left: 1rem;
     transform: translateY(-50%);
     position: absolute;
