--- a/my-app/src/app/product-list/product-list.component.html
+++ b/my-app/src/app/product-list/product-list.component.html
@@ -25,7 +25,7 @@
           class="quantity"
           step="1"
           value="{{ pro.quantity }}"
-          (input)="onChangeQuantity(inputquantity)"
+          (input)="inputQuantity(pro.id,inputquantity)"
 
         />
       </div>
