--- a/my-app/src/app/promo-code/promo-code.component.html
+++ b/my-app/src/app/promo-code/promo-code.component.html
@@ -1,5 +1,6 @@
 
   <div class="promotion">
     <label for="promo-code">Have A Promo Code?</label>
-    <input type="text" id="promo-code" /> <button type="button"></button>
+    <input  [(ngModel)]="promoCode"
+    (keyup.enter)="applyPromoCode()" /> <button type="button" (click)="applyPromoCode()"></button>
   </div>
