--- a/my-app/src/app/product-sum/product-sum.component.html
+++ b/my-app/src/app/product-sum/product-sum.component.html
@@ -1,8 +1,17 @@
 <div class="summary">
   <ul>
-    <li>Subtotal <span>$21.97</span></li>
-    <li>Tax <span>$5.00</span></li>
-    <li class="total">Total <span>$26.97</span></li>
+    <li>
+      Subtotal <span>{{ subTotal | currency }}</span>
+    </li>
+    <li *ngIf="discount > 0">
+      Discount <span>{{ discount | currency }}</span>
+    </li>
+    <li>
+      Tax <span>{{ tax | currency }}</span>
+    </li>
+    <li class="total">
+      Total <span>{{ subTotal - discount + tax | currency }}</span>
+    </li>
   </ul>
 </div>
 
