--- a/MapBox/style.css
+++ b/MapBox/style.css
@@ -2,8 +2,9 @@ body { margin: 0; padding: 0; }
 	#map { position: absolute; top: 0; bottom: 0; width: 100%; background:#ddd;}
 
 .map {
-    width: 100%;
+ width: 100%;
    height: 100%;
+   position: absolute; top: 0; bottom: 0; width: 100%; background:#ddd;
     }
     .selectStyle {
     position: absolute;
